--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       width: 50%;
       height: 90%;
       margin: auto;
-      /* background-color: #25d366; */
+      background-color: #25d366;
     }
 
     .overlay {
