try to add a fixed point to be displayed in chart

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         await delay(2);
 
         var data = response.getDataTable();
+
+        data.addRows([
+          [100, 100],
+        ]);
         chart.draw(data, options);
       }
 
