--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           duration: 300,
           easing: 'inAndOut',
         },
+        series: {
+          4: { colors: ['#FF0000'] }
+        },
         hAxis: { minValue: 0, maxValue: 1000 },
         vAxis: { minValue: 0, maxValue: 1000 },
       };
