--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
           easing: 'inAndOut',
         },
         series: {
-          4: { colors: ['#FF0000'] }
+          0: { pointShape: 'circle' },
+          1: { pointShape: 'triangle' },
+          2: { pointShape: 'square' },
+          3: { pointShape: 'diamond' },
+          4: { pointShape: 'star' }       
         },
         hAxis: { minValue: 0, maxValue: 1000 },
         vAxis: { minValue: 0, maxValue: 1000 },
