--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
           duration: 300,
           easing: 'inAndOut',
         },
-        series: {
-          0: { pointShape: 'circle' },
-          1: { pointShape: 'triangle' },
-          2: { pointShape: 'square' },
-          3: { pointShape: 'diamond' },
-          4: { pointShape: 'star' }       
-        },
+        
         hAxis: { minValue: 0, maxValue: 1000 },
         vAxis: { minValue: 0, maxValue: 1000 },
       };
@@ -75,8 +69,10 @@
 
         var data = response.getDataTable();
 
+        data.addColumn({'type': 'string', 'role': 'style'});
+
         data.addRows([
-          [100, 100],
+          [100, 100, 'point { size: 18; shape-type: star; fill-color: #a52714; }'],
         ]);
         chart.draw(data, options);
       }
