--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         data.addColumn({'type': 'string', 'role': 'style'});
 
         data.addRows([
-          [100, 100, 'point { size: 9; shape-type: star; fill-color: #a52714; }'],
+          [217, 225, 'point { size: 9; fill-color: #a52714; }'],
         ]);
         chart.draw(data, options);
       }
