test remove red circle

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
         var data = response.getDataTable();
 
-        data.addColumn({'type': 'string', 'role': 'style'});
+//         data.addColumn({'type': 'string', 'role': 'style'});
 
-        data.addRows([
-          [330, 736, 'point { size: 5; fill-color: #a52714; }'],
-        ]);
+//         data.addRows([
+//           [330, 736, 'point { size: 5; fill-color: #a52714; }'],
+//         ]);
         chart.draw(data, options);
       }
 
